# offline-to-online-template

./: .gitignore  README.md
docs/: integration_document.md
tools/preprocess/cpp/: CMakeLists.txt
tools/preprocess/cpp/config/: config.json
tools/preprocess/cpp/src/: config.cpp  config.h  emit.cpp  emit.h  main.cpp  provenance.cpp  provenance.hpp
tools/preprocess/cpp/src/generators/: preprocess_hf0.cpp  preprocess_hf0.h
tools/preprocess/python/: pyproject.toml
tools/preprocess/python/src/: cli.py  gen.py  io.py
tools/preprocess/python/src/hls_preprocess.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tools/preprocess/python/src/preprocess/: cli.py  gen.py
